--- a/edit_course/templates/edit_course/course_instance.html
+++ b/edit_course/templates/edit_course/course_instance.html
@@ -6,40 +6,40 @@
 
 <h2>{% trans "Teacher's view" %}</h2>
 
+<h3>{% trans "Exercise categories" %}</h3>
 <table class="table table-striped table-bordered table-condensed">
-    <thead>
-        <tr>
-            <th><h3>{% trans "Exercise categories" %}</h3></th>
-        </tr>
-    </thead>
     <tbody>
-    {% for category in instance.categories.all %}
+        {% for category in instance.categories.all %}
         <tr>
-            <th>
-                <strong>{{ category.name }}</strong>
+            <td>
+                {{ category.name }}
+            </td>
+            <td>
+                <a class="btn btn-mini" href="{% url 'model-edit' course=course.url instance=instance.url model='category' id=category.id %}">
+                    <i class="icon-edit"></i> {% trans "Edit category" %}
+                </a>
+                {% if category.learning_objects.count == 0 %}
+                <a class="btn btn-mini" href="{% url 'model-remove' course=course.url instance=instance.url model='category' id=category.id %}">
+                	<i class="icon-remove"></i> {% trans "Remove" %}
+                </a>
+                {% endif %}
+            </td>
+        </tr>
+        {% endfor %}
+        <tr>
+            <th colspan="2">
+                <a class="btn btn-primary btn-mini" href="{% url 'model-create' course=course.url instance=instance.url model='category' %}">
+                    <i class="icon-plus-sign icon-white"></i> {% trans "Add new category" %}
+                </a>
             </th>
         </tr>
-    {% endfor %}
     </tbody>
 </table>
 
-<p>
-    <a href="/admin/exercise/learningobjectcategory/"
-       class="btn btn-primary btn-mini">
-        <i class="icon-edit icon-white"></i> {% trans "Edit categories" %}
-    </a> ({% trans "You need to be a superuser" %})
-</p>
-
-
+<h3>{% trans "Course modules" %}</h3>
 <table class="table table-striped table-bordered table-condensed">
-    <thead>
-        <tr>
-            <th colspan="2"><h3>{% trans "Course modules" %}</h3></th>
-        </tr>
-    </thead>
     <tbody>
-
-    {% for module in instance.course_modules.all %}
+        {% for module in instance.course_modules.all %}
         <tr>
             <th><strong>{{ module }}</strong></th>
             <td>
@@ -52,7 +52,6 @@
                 </a>
                 {% endif %}
             </td>
-
         </tr>
         {% for object in module.chapters.all %}
         <tr>
@@ -71,7 +70,7 @@
         {% endfor %}
         <tr>
             <td colspan="2">
-                <a class="btn btn-mini btn-primary" href="{% url 'model-create-for' course=course.url instance=instance.url model='chapter' parent_id=module.id %}">
+                <a class="btn btn-mini btn-success" href="{% url 'model-create-for' course=course.url instance=instance.url model='chapter' parent_id=module.id %}">
                     {% trans "Add new chapter" %}
                 </a>
             </td>
@@ -123,14 +122,16 @@
                 </div>
             </td>
         </tr>
-    {% endfor %}
+        {% endfor %}
+        <tr>
+            <th colspan="2">
+                <a class="btn btn-primary btn-mini" href="{% url 'model-create' course=course.url instance=instance.url model='module' %}">
+                    <i class="icon-plus-sign icon-white"></i> {% trans "Add new module" %}
+                </a>
+            </th>
+        </tr>
     </tbody>
 </table>
-
-<a class="btn btn-primary btn-mini" href="{% url 'model-create' course=course.url instance=instance.url model='module' %}">
-    <i class="icon-plus-sign icon-white"></i> {% trans "Add new module" %}
-</a>
-
 
 <h3>{% trans "Deadline Rule Deviations" %}</h3>
 <p>{% trans "Add or view personalized deadlines for students for exercises." %}</p>
@@ -142,7 +143,6 @@
 </a>
 
 <div class="col-sm-10">
-
 	{% blocktrans %}
 	<h3>Batch Create and Assess Submissions</h3>
 	<p><em>Use only if you know what you are doing!</em></p>
@@ -179,7 +179,6 @@
 		</pre>
 	</div>
    {% endblocktrans %}
-
 </div>
 <form method="post" action="{{ instance|url:'batch-assess' }}">
 	{% csrf_token %}
