--- a/course/templates/course/course_base.html
+++ b/course/templates/course/course_base.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ course.name }}{% block title_postfix %}{% endblock %}{% endblock %}
+{% block title %}{{ course.name }}{% endblock %}
 
 {% block content %}
 <div class="row">
