--- a/templates/_messages.html
+++ b/templates/_messages.html
@@ -1,6 +1,6 @@
 {% if messages %}
     {% for message in messages %}
-        <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}" role="alert">
+        <div class="alert alert-{% if message.level == 10 %}success{% elif message.level == 40 %}danger{% else %}{{ message.tags }}{% endif %}" role="alert">
             {{ message }}
         </div>
     {% endfor %}
