--- a/edit_course/templates/edit_course/course_instance.html
+++ b/edit_course/templates/edit_course/course_instance.html
@@ -1,167 +1,193 @@
-{% extends "course/course_base.html" %}
+{% extends "edit_course/edit_course_base.html" %}
 {% load i18n %}
 {% load course %}
+{% load editcourse %}
+
+{% block breadcrumb %}
+<li><a href="{{ instance|url }}">{% trans "Home" %}</a></li>
+<li class="active">{% trans "Edit course" %}</li>
+{% endblock %}
 
 {% block coursecontent %}
-
-<h2>{% trans "Teacher's view" %}</h2>
-
-<h3>{% trans "Exercise categories" %}</h3>
-<table class="table table-striped table-bordered table-condensed">
-    <tbody>
-        {% for category in instance.categories.all %}
-        <tr>
-            <td>
-                {{ category.name }}
-            </td>
-            <td>
-                <a class="btn btn-mini" href="{% url 'model-edit' course=course.url instance=instance.url model='category' id=category.id %}">
-                    <i class="icon-edit"></i> {% trans "Edit category" %}
-                </a>
-                {% if category.learning_objects.count == 0 %}
-                <a class="btn btn-mini" href="{% url 'model-remove' course=course.url instance=instance.url model='category' id=category.id %}">
-                	<i class="icon-remove"></i> {% trans "Remove" %}
-                </a>
-                {% endif %}
-            </td>
-        </tr>
-        {% endfor %}
-        <tr>
-            <th colspan="2">
-                <a class="btn btn-primary btn-mini" href="{% url 'model-create' course=course.url instance=instance.url model='category' %}">
-                    <i class="icon-plus-sign icon-white"></i> {% trans "Add new category" %}
-                </a>
-            </th>
-        </tr>
-    </tbody>
-</table>
-
-<h3>{% trans "Course modules" %}</h3>
-<table class="table table-striped table-bordered table-condensed">
-    <tbody>
-        {% for module in instance.course_modules.all %}
-        <tr>
-            <th><strong>{{ module }}</strong></th>
-            <td>
-                <a class="btn btn-mini" href="{% url 'model-edit' course=course.url instance=instance.url model='module' id=module.id %}">
-                    <i class="icon-edit"></i> {% trans "Edit module" %}
-                </a>
-                {% if module.learning_objects.count == 0 %}
-                <a class="btn btn-mini" href="{% url 'model-remove' course=course.url instance=instance.url model='module' id=module.id %}">
-                	<i class="icon-remove"></i> {% trans "Remove" %}
-                </a>
-                {% endif %}
-                <a class="btn btn-mini btn-link" href="{{ module|url }}">
-                    {% trans "Open module" %}
-                </a>
-            </td>
-        </tr>
-        {% for object in module.chapters.all %}
-        <tr>
-            <td>
-                {{ object }}
-            </td>
-            <td>
-                <a class="btn btn-mini" href="{% url 'model-edit' course=course.url instance=instance.url model='chapter' id=object.id %}">
-                    <i class="icon-edit"></i> {% trans "Edit chapter" %}
-                </a>
-                <a class="btn btn-mini" href="{% url 'model-remove' course=course.url instance=instance.url model='chapter' id=object.id %}">
-                    <i class="icon-remove"></i> {% trans "Remove" %}
-                </a>
-                <a class="btn btn-mini btn-link" href="{{ object|url }}">
-                    {% trans "Open chapter" %}
-                </a>
-            </td>
-        </tr>
-        {% endfor %}
-        <tr>
-            <td colspan="2">
-                <a class="btn btn-mini btn-success" href="{% url 'model-create-for' course=course.url instance=instance.url model='chapter' parent_id=module.id %}">
-                    {% trans "Add new chapter" %}
-                </a>
-            </td>
-        </tr>
-        {% for object in module.learning_objects.all %}
-        <tr>
-            <td>
-                {{ object }}
-            </td>
-            <td>
-                <a class="btn btn-mini" href="{% url 'model-edit' course=course.url instance=instance.url model='exercise' id=object.id %}">
-                    <i class="icon-edit"></i> {% trans "Edit exercise" %}
-                </a>
-                <a class="btn btn-mini" href="{% url 'model-remove' course=course.url instance=instance.url model='exercise' id=object.id %}">
-                    <i class="icon-remove"></i> {% trans "Remove" %}
-                </a>
-                <a class="btn btn-mini btn-link" href="{{ object|url }}">
-                	{% trans "Open exercise" %}
-                </a>
-                <a class="btn btn-mini btn-link" href="{{ object|url:'submission-list' }}">
-                	{% trans "View submissions" %}
-                </a>
-            </td>
-        </tr>
-        {% endfor %}
-        <tr>
-            <td colspan="2">
-                <div class="btn-group">
-                    <a class="btn btn-mini btn-success" href="{% url 'model-create-for' course=course.url instance=instance.url model='exercise' parent_id=module.id %}">
-                        {% trans "Add new exercise" %}
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        <h3 class="panel-title">{% trans "Exercise categories" %}</h3>
+    </div>
+    <table class="table table-striped table-bordered table-condensed">
+        <tbody>
+            {% for category in instance.categories.all %}
+            <tr>
+                <td>
+                    {{ category.name }}
+                </td>
+                <td>
+                    <a class="btn btn-default btn-xs" href="{{ category|editurl:'category' }}">
+                        <span class="glyphicon glyphicon-edit"></span>
+                        {% trans "Edit category" %}
                     </a>
-                    <button type="button" class="btn btn-mini dropdown-toggle" data-toggle="dropdown">
-                      <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu" role="menu">
-                        <li>
-                            <a href="{% url 'model-create-for' course=course.url instance=instance.url model='exercise' parent_id=module.id %}">
-                                {% trans "Add exercise" %}
-                            </a>
-                        </li>
-                        <li>
-                            <a href="{% url 'model-create-type-for' course=course.url instance=instance.url model='exercise' parent_id=module.id type='static' %}">
-                                {% trans "Add static exercise" %}
-                            </a>
-                        </li>
-                        <li>
-                            <a href="{% url 'model-create-type-for' course=course.url instance=instance.url model='exercise' parent_id=module.id type='attachment' %}">
-                                {% trans "Add exercise with attachment" %}
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </td>
-        </tr>
-        {% endfor %}
-        <tr>
-            <th colspan="2">
-                <a class="btn btn-primary btn-mini" href="{% url 'model-create' course=course.url instance=instance.url model='module' %}">
-                    <i class="icon-plus-sign icon-white"></i> {% trans "Add new module" %}
-                </a>
-            </th>
-        </tr>
-    </tbody>
-</table>
+                    {% if category.learning_objects.count == 0 %}
+                    <a class="btn btn-default btn-xs" href="{{ category|removeurl:'category' }}">
+                    	<i class="glyphicon glyphicon-remove"></i> {% trans "Remove" %}
+                    </a>
+                    {% endif %}
+                </td>
+            </tr>
+            {% endfor %}
+            <tr>
+                <th colspan="2">
+                    <a class="btn btn-primary btn-xs" href="{{ instance|createurl:'category' }}">
+                        <span class="glyphicon glyphicon-plus-sign"></span>
+                        {% trans "Add new category" %}
+                    </a>
+                </th>
+            </tr>
+        </tbody>
+    </table>
+</div>
 
-<h3>{% trans "Deadline Rule Deviations" %}</h3>
-<p>{% trans "Add or view personalized deadlines for students for exercises." %}</p>
-<a class="btn btn-primary btn-mini" href="{{ instance|url:'deviations-add-dl' }}">
-    <i class="icon-plus-sign icon-white"></i> {% trans "Add Deadline Deviations" %}
-</a>
-<a class="btn btn-primary btn-mini" href="{{ instance|url:'deviations-list-dl' }}">
-    <i class="icon-list-alt icon-white"></i> {% trans "List Deadline Deviations" %}
-</a>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        <h3 class="panel-title">{% trans "Course modules" %}</h3>
+    </div>
+    <table class="table table-striped table-bordered table-condensed">
+        <tbody>
+            {% for module in instance.course_modules.all %}
+            <tr class="success">
+                <th><strong>{{ module }}</strong></th>
+                <td>
+                    <a class="btn btn-default btn-xs" href="{{ module|editurl:'module' }}">
+                        <span class="glyphicon glyphicon-edit"></span> {% trans "Edit module" %}
+                    </a>
+                    {% if module.learning_objects.count == 0 %}
+                    <a class="btn btn-default btn-xs" href="{{ module|removeurl:'module' }}">
+                    	<span class="glyphicon glyphicon-remove"></span> {% trans "Remove" %}
+                    </a>
+                    {% endif %}
+                    <a class="btn btn-link btn-xs" href="{{ module|url }}">
+                        {% trans "Open module" %}
+                    </a>
+                </td>
+            </tr>
+            {% for object in module.chapters.all %}
+            <tr>
+                <td>
+                    {{ object }}
+                </td>
+                <td>
+                    <a class="btn btn-default btn-xs" href="{{ object|editurl:'chapter' }}">
+                        <span class="glyphicon glyphicon-edit"></span> {% trans "Edit chapter" %}
+                    </a>
+                    <a class="btn btn-default btn-xs" href="{{ object|removeurl:'chapter' }}">
+                        <span class="glyphicon glyphicon-remove"></span> {% trans "Remove" %}
+                    </a>
+                    <a class="btn btn-link btn-xs" href="{{ object|url }}">
+                        {% trans "Open chapter" %}
+                    </a>
+                </td>
+            </tr>
+            {% endfor %}
+            <tr>
+                <td colspan="2">
+                    <a class="btn btn-success btn-xs" href="{{ module|createurl:'chapter' }}">
+                        {% trans "Add new chapter" %}
+                    </a>
+                </td>
+            </tr>
+            {% for object in module.learning_objects.all %}
+            <tr>
+                <td>
+                    {{ object }}
+                </td>
+                <td>
+                    <a class="btn btn-default btn-xs" href="{{ object|editurl:'exercise' }}">
+                        <span class="glyphicon glyphicon-edit"></span> {% trans "Edit exercise" %}
+                    </a>
+                    <a class="btn btn-default btn-xs" href="{{ object|removeurl:'exercise' }}">
+                        <span class="glyphicon glyphicon-remove"></span> {% trans "Remove" %}
+                    </a>
+                    <a class="btn btn-link btn-xs" href="{{ object|url }}">
+                    	{% trans "Open exercise" %}
+                    </a>
+                    <a class="btn btn-link btn-xs" href="{{ object|url:'submission-list' }}">
+                    	{% trans "View submissions" %}
+                    </a>
+                </td>
+            </tr>
+            {% endfor %}
+            <tr>
+                <td colspan="2">
+                    <div class="btn-group dropdown">
+                        <a class="btn btn-success btn-xs" href="{{ module|createurl:'exercise' }}">
+                            {% trans "Add new exercise" %}
+                        </a>
+                        <a class="dropdown-toggle btn btn-success btn-xs" data-toggle="dropdown" href="#"
+                            role="button" aria-haspopup="true" aria-expanded="false">
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="{{ module|createurl:'exercise' }}">
+                                    {% trans "Add exercise" %}
+                                </a>
+                            </li>
+                            <li>
+                                <a href="{{ module|createurl:'exercise,static' }}">
+                                    {% trans "Add static exercise" %}
+                                </a>
+                            </li>
+                            <li>
+                                <a href="{{ module|createurl:'exercise,attachment' }}">
+                                    {% trans "Add exercise with attachment" %}
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </td>
+            </tr>
+            {% endfor %}
+            <tr>
+                <th colspan="2">
+                    <a class="btn btn-primary btn-xs" href="{{ instance|createurl:'module' }}">
+                        <span class="glyphicon glyphicon-plus-sign"></span> {% trans "Add new module" %}
+                    </a>
+                </th>
+            </tr>
+        </tbody>
+    </table>
+</div>
 
-<div class="col-sm-10">
-	{% blocktrans %}
-	<h3>Batch Create and Assess Submissions</h3>
-	<p><em>Use only if you know what you are doing!</em></p>
-	<p>By submitting json to the form below you can try to create and assess multiple exercises for students automatically.</p>
-	<div>
-		<p>XXXXX1 and XXXXX2 are the real student ids</p>
-		<p>X1 (integer) is the A+ userprofile id of the desired grader</p>
-		<p>Z1 and Z2 (integers) are A+ exercise ids</p>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        <h3 class="panel-title">{% trans "Deadline rule deviations" %}</h3>
+    </div>
+    <div class="panel-body">
+        <p>{% trans "Add or view personalized deadlines for students for exercises." %}</p>
+        <a class="btn btn-primary btn-xs" href="{{ instance|url:'deviations-add-dl' }}">
+            <span class="glyphicon glyphicon-plus-sign"></span> {% trans "Add deadline deviations" %}
+        </a>
+        <a class="btn btn-primary btn-xs" href="{{ instance|url:'deviations-list-dl' }}">
+            <span class="glyphicon glyphicon-list-alt"></span> {% trans "List deadline deviations" %}
+        </a>
+    </div>
+</div>
 
-		<pre>{
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        <h3 class="panel-title">{% trans "Batch create and assess submissions" %}</h3>
+    </div>
+    <div class="panel-body">
+        {% blocktrans %}
+<p><em>Use only if you know what you are doing!</em></p>
+<p>By submitting json to the form below you can try to create and assess multiple exercises for students automatically.</p>
+<dl>
+	<dt>XXXXX1 and XXXXX2</dt>
+    <dd>the real student ids</dd>
+	<dt>X1 (integer)</dt>
+    <dd>the A+ userprofile id of the desired grader</dd>
+	<dt>Z1 and Z2 (integers)</dt>
+    <dd>A+ exercise ids</dd>
+</dl>
+<pre>{
   "objects": [
     {
       "students_by_student_id": [
@@ -185,14 +211,17 @@
     }
   ]
 }
-		</pre>
-	</div>
-   {% endblocktrans %}
+</pre>
+       {% endblocktrans %}
+        <form method="post" action="{{ instance|url:'batch-assess' }}">
+        	{% csrf_token %}
+            <div class="form-group">
+                <textarea name="submissions_json"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">
+                {% trans "Submit" %}
+            </button>
+        </form>
+    </div>
 </div>
-<form method="post" action="{{ instance|url:'batch-assess' }}">
-	{% csrf_token %}
-    <textarea name="submissions_json"></textarea>
-    <button type="submit" class="btn">{% trans "Submit" %}</button>
-</form>
-
 {% endblock %}
