--- a/exercise/templates/exercise/exercise_base.html
+++ b/exercise/templates/exercise/exercise_base.html
@@ -3,6 +3,8 @@
 {% load course %}
 {% load apps %}
 
+{% block title %}{{ block.super }}: {% trans "Exercise" %} {{ module.order }}.{{ exercise.order }}{% endblock %}
+
 {% block content %}
 <div class="row">
     <div class="col-md-2">
@@ -10,7 +12,7 @@
     </div>
     {% block columns %}
     <div class="col-md-8">
-        {% include "exercise/_exercise_tabs.html" %}
+        {% include "exercise/_exercise_header.html" %}
         {% block exercisecontent %}
         {% endblock %}
     </div>
