--- a/exercise/templates/exercise/profile.html
+++ b/exercise/templates/exercise/profile.html
@@ -3,7 +3,7 @@
 {% load course %}
 {% load notification %}
 
-{% block title_postfix %}: {% trans "Profile" %}{% endblock %}
+{% block title %}{{ block.super }}: {% trans "Profile" %}{% endblock %}
 {% block view_tag %}profile{% endblock %}
 
 {% block columns %}
