--- a/exercise/templates/exercise/staff/_submissions_table.html
+++ b/exercise/templates/exercise/staff/_submissions_table.html
@@ -49,6 +49,10 @@
                 </a>
             </td>
         </tr>
+        {% empty %}
+        <tr>
+            <td class="5">{% trans "No submissions" %}</td>
+        </tr>
         {% endfor %}
     </tbody>
 </table>
