--- a/exercise/templates/exercise/staff/assess_submission.html
+++ b/exercise/templates/exercise/staff/assess_submission.html
@@ -1,90 +1,37 @@
-{% extends "course/course_base.html" %}
+{% extends "exercise/exercise_base.html" %}
 {% load i18n %}
 {% load course %}
-{% load exercise %}
+{% load bootstrap %}
 
-{% block coursecontent %}
+{% block title %}{{ block.super }} / {% trans "Assess SID " %} {{ submission.id}}{% endblock %}
+{% block view_tag %}assess{% endblock %}
 
-<div class="row">
-    <div class="span10">
-        <ul class="breadcrumb">
-            <li>
-                <a href="{{ instance|url }}">
-                	{{ course.name }}
-                </a>
-                <span class="divider">/</span>
-            </li>
-            <li>
-                <a href="{{ exercise|url:'submission-list' }}">
-                	{{ exercise.name }}
-                </a>
-                <span class="divider">/</span>
-            </li>
-            <li>
-                <a href="{% submission|url:'submission-inspect' }}">
-					{% trans "Submission" %} {{ submission.id }}
-                </a>
-                <span class="divider">/</span>
-            </li>
-            <li class="active">
-                {% trans "Manual assessment" %}
-            </li>
-        </ul>
-    </div>
-</div>
-
-<div class="row">
-    <div class="span4" id="student-submission">
-        <h2>{% trans "Submission" %}</h2>
-
-        <div class="well">
-
-            <h3>{% trans "General information" %}</h3>
-            <dl>
-                <dt>{% trans "Submitters" %}</dt>
-                <dd>{{ submission.submitters.all|students }}</dd>
-            </dl>
-
-            <hr />
-
-            <h3>{% trans "Submitted values" %}</h3>
-            <dl>
-            	{% for item in submission.submission_data %}
-                <dt>{{ item.0 }}</dt>
-                <dd>{{ item.1 }}</dd>
-            	{% empty %}
-                <dt>
-                    {% trans "No values" %}
-                </dt>
-            	{% endfor %}
-            </dl>
-
-            <hr />
-
-            <h3>{% trans "Submitted files" %}</h3>
-            <ul class="unstyled">
-                {% for file in submission.files.all %}
-                <li>
-                	<i class="icon-file"></i>
-                    {% include 'exercise/_file_link.html' %}
-                </li>
-                {% empty %}
-                <li>
-                    {% trans "No files" %}
-                </li>
-                {% endfor %}
-            </ul>
-
+{% block columns %}
+<div class="col-md-10">
+    <ol class="breadcrumb">
+        <li><a href="{{ instance|url }}">{{ course.name }}</a></li>
+        <li><a href="{{ exercise|url }}">{{ exercise }}</a></li>
+        <li><a href="{{ exercise|url:'submission-list' }}">{% trans "All submissions"  %}</a></li>
+        <li><a href="{{ submission|url }}">{% trans "Submission ID" %} {{ submission.id }}</a></li>
+        <li class="active">{% trans "Assess" %}</td>
+    </ol>
+    <div class="row">
+        <div class="col-md-5">
+            {% include "exercise/staff/_assess_info.html" %}
         </div>
-    </div>
-    <div class="span6" id="generated-feedback">
-        <h2>{% trans "Assessment" %}</h2>
-        <div class="well">
-            <form method="post">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <input class="btn btn-primary" type="submit" value="{% trans 'Save' %}" />
-            </form>
+        <div class="col-md-7">
+
+            <h3>{% trans "Assessment" %}</h3>
+            <div class="well">
+                <form method="post" role="form">
+                    {% csrf_token %}
+                    {{ form|bootstrap }}
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary">{% trans 'Save' %}</button>
+                        <a href="{{ submission|url:'submission-inspect' }}" class="btn btn-default">{% trans "Cancel" %}</a>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
