--- a/exercise/templates/exercise/staff/results.html
+++ b/exercise/templates/exercise/staff/results.html
@@ -1,11 +1,16 @@
 {% extends "course/course_base.html" %}
 {% load i18n %}
+{% load course %}
 
-{% block coursecontent %}
-<div class="row">
-    <div class="span10">
-        <h2>{% trans "Result summary" %}</h2>
-        {% include 'exercise/staff/_results_table.html' with result_table=table %}
-    </div>
+{% block title %}{{ block.super }}: {% trans "All results" %}{% endblock %}
+{% block view_tag %}all-results{% endblock %}
+
+{% block columns %}
+<div class="col-md-10">
+    <ol class="breadcrumb">
+        <li><a href="{{ instance|url }}">{% trans "Home" %}</a></li>
+        <li class="active">{% trans "All results" %}</li>
+    </ol>
+    {% include 'exercise/staff/_results_table.html' with result_table=table %}
 </div>
 {% endblock %}
